# aia-contrail-avoidance

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  2024_01_01_sample_stats.json  choropleth_map.html  contrail_avoidance.html  mkdocs.yml  pyproject.toml
airport_data/: airports.parquet  airports.parquet:Zone.Identifier  view_airport_data.ipynb
analysis/: airspace.py  calculate_energy_forcing.py  generate_energy_forcing_statistics.py  generate_flight_data_statistics_with_histogram.py  generate_synthetic_flight_database.py  plot_air_traffic_density_map.py  plot_contrails_formed_per_time.py  plot_distance_flown_by_altitude_histogram.py  plot_energy_forcing_histogram.py  plot_uk_airspace.py  plot_uk_airspace_with_segments.py  process-ads-b-flight-data.py  run_policy_option.py
cosip_grid/: cocipgrid_sample_result.nc  cocipgrid_uk_adsb_jan_result.nc  generate_erf_grid.ipynb
data/energy_forcing_data/: generate_erf_grid.ipynb
data/flight_data/: flight_data_processing.py
docs/: ads_b_data_processing.md  creating_cosip_grid.md
flight_data/: explore_flight_data.ipynb  flight_data_processing.py  generate_flight_data_statistics.py  visualise_flight_data.ipynb
plotly_analysis/: generate_all_plotly_graphs.py  plot_distance_flown_by_altitude_histogram.py  plotly_contrails_formed_per_time.py  plotly_distance_flown_by_altitude_histogram.py  plotly_energy_forcing_histogram.py  plotly_uk_airspace.py
plotly_analysis/plotly_plots/: distance_flown_by_altitude_histogram.html  energy_forcing_cumulative.html  energy_forcing_per_flight_histogram.html  uk_airspace_map.html
src/aia_model_contrail_avoidance/: airports.py  config.py  cosip_grid_environment.py  environment.py  flight_data_processing.py  flights.py
src/aia_model_contrail_avoidance/core_model/: __init__.py  airspace.py  dimensions.py  environment.py  flights.py
src/aia_model_contrial_avoidance/: __init__.py
tests/: test_airports.py  test_environment.py  test_flights.py
